--- a/style1.css
+++ b/style1.css
@@ -56,3 +56,12 @@ textarea{
 .riscos_funcao input{
     color: rgb(0, 0, 0);
 }
+
+button{
+    width: 95%;
+    height: 40px;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: blue;
+    font-weight: bold;
+}
