--- a/style1.css
+++ b/style1.css
@@ -65,3 +65,30 @@ button{
     color: blue;
     font-weight: bold;
 }
+
+#campoAdc{
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+#campoAdc button{
+    width: 350px;
+    height: 40px;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: blue;
+    font-weight: bold;
+}
+
+#campoAdc input{
+    width: 330px;
+    height: 30px;
+    border: 0px;
+    margin-top: 15px;
+    font-size: 15px;
+    padding-left: 10px;
+    border-radius: 5px;
+}
